# mini-arcade-core

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  create-release-branch.yml  finalize-release.yml  publish-from-release.yml  release.yml  sync-develop.yml
src/mini_arcade_core/: __init__.py  backend.py  boundaries2d.py  cheats.py  collision2d.py  commands.py  entity.py  game.py  geometry2d.py  kinematics2d.py  physics2d.py  registry.py  scene.py
src/mini_arcade_core/backend/: __init__.py  backend.py  keys.py  sdl_map.py
src/mini_arcade_core/engine/: animation.py  cheats.py  commands.py  components.py  entities.py  game.py  game_config.py  gameplay_settings.py
src/mini_arcade_core/engine/loop/: hooks.py  runner.py
src/mini_arcade_core/engine/render/: __init__.py  camera.py  context.py  frame_packet.py  packet.py  pipeline.py  render_service.py  viewport.py
src/mini_arcade_core/engine/render/effects/: crt.py  vignette.py
src/mini_arcade_core/engine/render/passes/: base.py  begin_frame.py  end_frame.py  lighting.py  postfx.py  ui.py  world.py
src/mini_arcade_core/engine/scenes/: models.py  scene_manager.py
src/mini_arcade_core/managers/: __init__.py  base.py  cheats.py  inputs.py  system.py
src/mini_arcade_core/render/: __init__.py  packet.py  pipeline.py
src/mini_arcade_core/runtime/: __init__.py  adapters.py  context.py  input_frame.py  services.py
src/mini_arcade_core/runtime/audio/: audio_adapter.py  audio_port.py
src/mini_arcade_core/runtime/capture/: base_worker.py  capture_adapter.py  capture_port.py  capture_service.py  capture_service_protocol.py  capture_settings.py  capture_worker.py  encode_worker.py  event_handlers.py  events.py  video.py  video_encoder.py  video_manifest.py  video_session.py
src/mini_arcade_core/runtime/input/: input_adapter.py  input_port.py
src/mini_arcade_core/runtime/render/: render_port.py
src/mini_arcade_core/runtime/scene/: scene_adapter.py  scene_port.py
src/mini_arcade_core/runtime/window/: window_adapter.py  window_port.py
src/mini_arcade_core/scenes/: __init__.py  bootstrap.py  debug_overlay.py  entity_blueprints.py  game_scene.py  registry.py  runtime.py  scene.py  sim_scene.py
src/mini_arcade_core/scenes/systems/: __init__.py  base_system.py  system_bundle.py  system_pipeline.py
src/mini_arcade_core/scenes/systems/builtins/: __init__.py  actions.py  animation.py  bomberman.py  brackets.py  brick_breaker.py  capture_hotkeys.py  combat.py  cull.py  falling_blocks.py  grid.py  intent_commands.py  maze.py  movement.py  particles.py  powerups.py  projectiles.py  score_chain.py  spawn.py  timers.py
src/mini_arcade_core/sim/: __init__.py  protocols.py  runner.py
src/mini_arcade_core/spaces/collision/: specs.py
src/mini_arcade_core/spaces/d2/: kinematics2d.py
src/mini_arcade_core/spaces/geometry/: rect.py  size.py  transform.py
src/mini_arcade_core/spaces/math/: vec2.py
src/mini_arcade_core/spaces/physics/: kinematics2d.py
src/mini_arcade_core/ui/: __init__.py  forms.py  menu.py
src/mini_arcade_core/utils/: deprecated.py  logger.py  logging.py  profiler.py
tests/: test_backend.py  test_boundaries2d.py  test_builtin_systems.py  test_camera.py  test_collision2d.py  test_entity.py  test_entity_blueprints.py  test_game.py  test_game_regressions.py  test_geometry2d.py  test_init.py  test_input_adapter.py  test_kinematics2d.py  test_physics2d.py  test_runner_capture_overlay.py  test_scene.py  test_smoke_examples_and_games.py
