[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mini-arcade-core"
version = "1.6.2"
description = "Tiny scene-based game loop core for small arcade games."
authors = [
    { name = "Santiago Rincon", email = "rincores@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.12"
dependencies = ["pillow (<12)"]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "black~=24.10",
    "isort~=5.13",
    "mypy~=1.5",
    "pylint~=3.3",
]

[tool.black]
line-length = 79
target-version = ["py39"]
force-exclude = '''(
^\.venv
|^venv
|^env
|^\.env
|^build
|^dist
|^docs
)'''

[tool.isort]
profile = "black"
line_length = 79
known_first_party = [
    "examples",
    "mini_arcade",
    "mini_arcade_core",
    "mini_arcade_native_backend",
    "mini_arcade_pygame_backend",
]
skip = [".venv", "venv", "env", "build", "dist", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --color=yes"

[tool.mypy]
python_version = "3.9"
packages = ["mini_arcade_core"]
ignore_missing_imports = true
strict = false

[tool.pylint.messages_control]
disable = [
    # Justification: Classes with few public methods are common, specially interfaces,
    # data containers and base classes.
    "too-few-public-methods",
    # Justification: f-strings are preferred for logging.
    "logging-fstring-interpolation",
    # Justification: Some functions naturally require many arguments to function.
    "too-many-arguments",
    # Justification: Broad exceptions are sometimes necessary for simplicity.
    "broad-exception-caught",
    # Justification: isort owns import ordering; pylint misclassifies sibling packages as third-party.
    "wrong-import-order",
    # Justification: TODOs are acceptable during development.
    "fixme",
    # Justification: Some code patterns are intentionally duplicated across packages
    # for simplicity.
    "duplicate-code",
    # Justification: Some classes naturally require many attributes to function.
    "too-many-instance-attributes",
    # Justification: Some functions naturally require many local variables to function.
    "too-many-locals",
]

[tool.pylint.MAIN]
ignore-paths = [
    "^\\.venv",
    "^venv",
    "^tests",
    "^env",
    "^build",
    "^dist",
    "^docs",
]

[tool.pylint.DESIGN]
max-attributes = 14

[tool.poetry]
packages = [{ include = "mini_arcade_core", from = "src" }]
